Delete button works

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,16 +3,16 @@
 
 /* layout */
 :root {
-  --primary: #FFBDF1;
+  --primary: #ffbff2;
   --error: #e7195a;
 }
 body {
-  background: #f1f1f1;
+  background: #ffe0f8;
   margin: 0;
   font-family: "Poppins";
 }
 header {
-  background: #ffcff6;
+  background: #ffffff;
 }
 header .container {
   max-width: 1400px;
@@ -60,12 +60,12 @@ header a {
 .workoutDetails span {
   position: absolute;
   top: 20px;
-  right: 20px;
+  right: 10px;
   cursor: pointer;
-  background: #f1f1f1;
+  background: #ededed;
   padding: 6px;
   border-radius: 50%;
-  color: #7A7A7A;
+  color: #565656;
 }
 
 /* form */
@@ -84,7 +84,7 @@ input {
 form button {
   background: var(--primary);
   border: 0;
-  color: #fff;
+  color: #ffffff;
   padding: 10px;
   font-family: "Poppins";
   border-radius: 4px;
